@@ -1,3 +1,14 @@
+2008-04-06  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/parse.c (parse_primary_expression) src/parse.h:
+	Track highest data column referred to in an expression.
+
+	* src/datafile.c (plot_option_using): Use info returned by perm_at()
+	to update the highest data column used.  This allows us to catch at
+	least the simple case of autotitle columnheader for 'using 1:($3)'.
+	Deletion previous ugly code to approximate this for binary files.
+	Bug #1929227
+
 2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (boundary): Yet one more place ymax -> ymax-1.
